--- a/OneClick-stable-diffusion.ipynb
+++ b/OneClick-stable-diffusion.ipynb
@@ -25,9 +25,6 @@
    "execution_count": null,
    "id": "2ce2fae8-24a6-400c-94ca-fd6cba45685f",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -54,27 +51,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea7a5f31-3268-4945-a99f-c27504aa2bf2",
-   "metadata": {},
-   "source": [
-    "## 加载全局函数\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72a15df6-8264-47de-8a93-2db71eebfaad",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "a586155e-1ce7-4cb9-b94e-c044fd85e15f",
    "metadata": {
     "tags": []
@@ -87,126 +63,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "ef32d892-2010-4a1c-b429-7ad98a1ac17a",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e282911b69b248b8ad317bc51e250d2c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='info', description='在使用【北京】代理', style=ButtonStyle(), tooltip='请点击下方的区名')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "db1ae85ee2e0432482533f8ae5fa40e0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='芜湖', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "854bc1d672c24df281fa7f13b8b80663",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='北京', icon='check', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "66f81d036524415f8dd133ca06311cd0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='内蒙', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b6931290d77b4b52a7134ed0ec465546",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='泉州', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d19630b2a83d4fb18eb129090a8de6af",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='南京', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cb1453acad5142fea811e358a8fafcc1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='佛山', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "import os\n",
-    "import subprocess\n",
-    "from ipywidgets import interact, widgets\n",
-    "from IPython.display import display, clear_output\n",
-    "\n",
-    "btnArray = []\n",
-    "region = '未知'\n",
-    "proxy = 'cd ./'  # 一句没有实际作用的命令作为占位\n",
-    "\n",
-    "ipDict = {\n",
-    "    '芜湖': '192.168.0.91',\n",
-    "    '北京': '100.72.64.19',\n",
-    "    '内蒙': '192.168.1.174',\n",
-    "    '泉州': '10.55.146.88',\n",
-    "    '南京': '172.181.217.43',\n",
-    "    '佛山': '192.168.126.12',\n",
-    "}\n",
-    "\n",
-    "\n",
-    "def autoRegion():\n",
-    "    for key in ipDict:\n",
-    "        ip = ipDict[key]\n",
-    "        if (os.system(f'ping -c 1 -w 1 {ip}') == 0):\n",
-    "            print('OK')\n",
-    "            global region, proxy\n",
-    "            region = key\n",
-    "            proxy = makeCLI(ip)\n",
-    "            clear_output(wait=True)\n",
-    "            break\n",
-    "        else:\n",
-    "            print('Connection failed')\n",
-    "            continue\n",
-    "\n",
-    "\n",
-    "def makeCLI(ip):\n",
-    "    return f'export http_proxy=http://{ip}:12798 && export https_proxy=http://{ip}:12798'\n",
-    "\n",
-    "\n",
-    "def printSuccess(region):\n",
-    "    # print(f'已挂载【{region}】对应的代理')\n",
-    "    picked.button_style = 'info'\n",
-    "    picked.description = f'在使用【{region}】代理'\n",
-    "    # picked.icon = 'check'\n",
-    "\n",
-    "\n",
-    "def printFail():\n",
-    "    # print(f'已挂载【{region}】对应的代理')\n",
-    "    picked.button_style = 'warning'\n",
-    "    picked.description = f'没有合适的代理'\n",
-    "    picked.icon = 'exclamation-triangle'\n",
-    "\n",
-    "\n",
-    "def autoClick(region):\n",
-    "    for o in btnArray:  # 取消所有按钮被选中的样式\n",
-    "        o.button_style = ''\n",
-    "        o.icon = ''\n",
-    "    printSuccess(region)\n",
-    "    for k in btnArray:\n",
-    "        if k.description == region:\n",
-    "            k.button_style = 'success'\n",
-    "            k.icon = 'check'\n",
-    "\n",
-    "\n",
-    "def btn_eventhandle(obj):\n",
-    "    global region, proxy\n",
-    "    for o in btnArray:  # 取消所有按钮被选中的样式\n",
-    "        o.button_style = ''\n",
-    "        o.icon = ''\n",
-    "    obj.button_style = 'success'\n",
-    "    obj.icon = 'check'\n",
-    "    region = obj.description\n",
-    "    ip = ipDict[region]\n",
-    "    proxy = makeCLI(ip)\n",
-    "    printSuccess(obj.description)\n",
-    "\n",
-    "\n",
-    "picked = widgets.Button(\n",
-    "    value=False,\n",
-    "    description=f'自动侦测中...',\n",
-    "    disabled=False,\n",
-    "    button_style='warning',  # 'success', 'info', 'warning', 'danger' or ''\n",
-    "    tooltip='请点击下方的区名',\n",
-    "    icon='question-circle'  # (FontAwesome names without the `fa-` prefix)\n",
-    ")\n",
-    "\n",
-    "for i in ipDict:\n",
-    "    btn = widgets.Button(\n",
-    "        description=i,\n",
-    "        disabled=False,\n",
-    "        button_style='',  # 'success', 'info', 'warning', 'danger' or ''\n",
-    "        tooltip='Click me',\n",
-    "        # icon='check' # (FontAwesome names without the `fa-` prefix)\n",
-    "    )\n",
-    "    btn.on_click(btn_eventhandle)\n",
-    "    btnArray.append(btn)\n",
-    "\n",
-    "btnArray.insert(0, picked)\n",
-    "\n",
-    "for e in btnArray:\n",
-    "    display(e)\n",
-    "\n",
-    "autoRegion()\n",
-    "if region != '未知':\n",
-    "    autoClick(region)\n",
-    "else:\n",
-    "    clear_output(wait=True)\n",
-    "    printFail()\n",
-    "\n",
-    "for e in btnArray:\n",
-    "    display(e)\n"
+    "from func.env import setProxy\n",
+    "setProxy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2f006f65-058b-46f8-96f3-ee8782eb2a07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already up to date.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!{proxy} &&\\\n",
+    "cd /root/OneClick-stable-diffusion && git pull"
    ]
   },
   {
@@ -224,9 +207,6 @@
    "execution_count": null,
    "id": "85cfa22d-8437-4508-87cf-57f7d13dcfc2",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -286,9 +266,6 @@
    "execution_count": null,
    "id": "d7c84343-104b-4d97-bad4-66f37b14c3cc",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "scrolled": true,
     "tags": []
    },
@@ -344,9 +321,6 @@
    "execution_count": 3,
    "id": "21d7715e-fac6-4e37-aac4-72dee6409a5f",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -376,7 +350,7 @@
     "from subprocess import getoutput\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display, clear_output\n",
-    "from func.hardwareInfo import getArch\n",
+    "from func.env import getArch\n",
     "\n",
     "import json\n",
     "\n",
@@ -465,9 +439,6 @@
    "execution_count": null,
    "id": "a51570b5-d491-427f-8e8f-3e3b62b2829a",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "scrolled": true,
     "tags": []
    },
@@ -538,9 +509,6 @@
    "execution_count": null,
    "id": "3084f787-0575-41eb-9aef-49932af1ba9e",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -575,9 +543,6 @@
    "execution_count": 4,
    "id": "43bd2fb8-e193-4b6f-8530-d4b93cff5a19",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -601,7 +566,7 @@
    "source": [
     "import os\n",
     "from subprocess import getoutput\n",
-    "from func.hardwareInfo import getArch\n",
+    "from func.env import getArch\n",
     "\n",
     "archCondition = False\n",
     "canUseXformers = False\n",
@@ -689,7 +654,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -703,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.8.10"
   },
   "toc-autonumbering": false,
   "toc-showmarkdowntxt": false,
