add auto git pull function

--- a/OneClick-stable-diffusion.ipynb
+++ b/OneClick-stable-diffusion.ipynb
@@ -21,12 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2ce2fae8-24a6-400c-94ca-fd6cba45685f",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -72,111 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ef32d892-2010-4a1c-b429-7ad98a1ac17a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "856937f33b6e477bb05b6558832efc7c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='info', description='在使用【北京】代理', style=ButtonStyle(), tooltip='请点击下方的区名')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7374c6ecffa40f89823ce5b9672f8aa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='芜湖', style=ButtonStyle(), tooltip='Click me')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b615f09b229f4d25a11ad8d829cf35c7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='success', description='北京', icon='check', style=ButtonStyle(), tooltip='Click me')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e316592260c4700a84d5959b78d51ac",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='内蒙', style=ButtonStyle(), tooltip='Click me')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fce7faad67b84a068bf8a5cf15139914",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='泉州', style=ButtonStyle(), tooltip='Click me')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd04067ff85a4e0aa3210b0fd1f7a2b4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='南京', style=ButtonStyle(), tooltip='Click me')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36d537b7c6ad491f86a686a76dbfd3d0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='佛山', style=ButtonStyle(), tooltip='Click me')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from func.env import setProxy\n",
     "cb=setProxy()\n",
@@ -195,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "85cfa22d-8437-4508-87cf-57f7d13dcfc2",
    "metadata": {
     "jupyter": {
@@ -203,22 +101,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4e9f7160361849ddb794a38648aac578",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='success', description='环境部署成功!', icon='check', style=ButtonStyle(), tooltip='Description'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from subprocess import getoutput\n",
     "from IPython.display import clear_output\n",
@@ -258,7 +141,9 @@
   {
    "cell_type": "markdown",
    "id": "3e392e78-580b-4d14-9fd7-26bcb2fdca7e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## <i class=\"fa fa-download\"></i> 更新本体与环境"
    ]
@@ -273,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "d7c84343-104b-4d97-bad4-66f37b14c3cc",
    "metadata": {
     "jupyter": {
@@ -282,22 +167,7 @@
     "scrolled": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0d38077ae304f53882c20c486288177",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='success', description='更新完成!', icon='check', style=ButtonStyle(), tooltip='Description')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
     "import ipywidgets as widgets\n",
@@ -346,34 +216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "21d7715e-fac6-4e37-aac4-72dee6409a5f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "本机GPU为【2080 Ti】，对应的英伟达架构名为【sm75】，已安装匹配【sm75】架构的Xformers预编译包\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3ccd9a5f7ad4a669e50411b77027364",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='success', description='完成Xformers安装', icon='check', style=ButtonStyle(), tooltip='Descrip…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from subprocess import getoutput\n",
     "import ipywidgets as widgets\n",
@@ -465,31 +313,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a51570b5-d491-427f-8e8f-3e3b62b2829a",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "scrolled": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33bd6d852a5b4f79b6f91935c5b46d34",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='安装中文语言包', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ipywidgets as widgets\n",
     "from subprocess import getoutput\n",
@@ -552,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3084f787-0575-41eb-9aef-49932af1ba9e",
    "metadata": {
     "jupyter": {
@@ -560,22 +390,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8acf5f21e8104daf8e295aa37686893f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='success', description='下载完成!', icon='check', style=ButtonStyle(), tooltip='Description')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
     "import ipywidgets as widgets\n",
@@ -612,39 +427,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "已经挂载【北京】proxy\n",
-      "可以使用Xformers\n",
-      "https_proxy=http://100.72.64.19:12798\n",
-      "http_proxy=http://100.72.64.19:12798\n",
-      "Python 3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:35:26) [GCC 10.4.0]\n",
-      "Commit hash: 98947d173e3f1667eba29c904f681047dea9de90\n",
-      "Installing requirements for Web UI\n",
-      "Launching Web UI with arguments: --share --opt-split-attention --port 6006 --deepdanbooru --xformers\n",
-      "Loading config from: /root/stable-diffusion-webui/models/Stable-diffusion/NovelAI.yaml\n",
-      "LatentDiffusion: Running in eps-prediction mode\n",
-      "DiffusionWrapper has 859.52 M params.\n",
-      "making attention of type 'vanilla' with 512 in_channels\n",
-      "Working with z of shape (1, 4, 64, 64) = 16384 dimensions.\n",
-      "making attention of type 'vanilla' with 512 in_channels\n",
-      "Using VAE found beside selected model\n",
-      "Loading weights [925997e9] from /root/stable-diffusion-webui/models/Stable-diffusion/NovelAI.ckpt\n",
-      "Loading VAE weights from: /root/stable-diffusion-webui/models/Stable-diffusion/NovelAI.vae.pt\n",
-      "Applying xformers cross attention optimization.\n",
-      "Model loaded.\n",
-      "Loaded a total of 0 textual inversion embeddings.\n",
-      "Embeddings: \n",
-      "Running on local URL:  http://127.0.0.1:6006\n",
-      "Running on public URL: https://5d932716d007914f.gradio.app\n",
-      "\n",
-      "This share link expires in 72 hours. For free permanent hosting and GPU upgrades (NEW!), check out Spaces: https://huggingface.co/spaces\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from subprocess import getoutput\n",
@@ -741,7 +524,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.10 ('base': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -759,7 +542,12 @@
   },
   "toc-autonumbering": false,
   "toc-showmarkdowntxt": false,
-  "toc-showtags": true
+  "toc-showtags": true,
+  "vscode": {
+   "interpreter": {
+    "hash": "2f394aca7ca06fed1e6064aef884364492d7cdda3614a461e02e6407fc40ba69"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
