split ipynb into multiple ipynbs

--- a/ipynb/OneClick-stable-diffusion.ipynb
+++ b/ipynb/OneClick-stable-diffusion.ipynb
@@ -24,6 +24,9 @@
    "execution_count": null,
    "id": "2ce2fae8-24a6-400c-94ca-fd6cba45685f",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -72,6 +75,9 @@
    "execution_count": null,
    "id": "ef32d892-2010-4a1c-b429-7ad98a1ac17a",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -219,6 +225,9 @@
    "execution_count": null,
    "id": "21d7715e-fac6-4e37-aac4-72dee6409a5f",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [],
@@ -316,6 +325,9 @@
    "execution_count": null,
    "id": "a51570b5-d491-427f-8e8f-3e3b62b2829a",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true,
     "tags": []
    },
@@ -495,36 +507,11 @@
     "\n",
     "!$cmd"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "598e159c-0636-4dac-8178-d18bf1cd4855",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e2318a9-caeb-4fa3-9598-b749cd5e9378",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
