add autoupdate for install.ipynb

--- a/tools/installOneClick-stable-diffusion.ipynb
+++ b/tools/installOneClick-stable-diffusion.ipynb
@@ -13,15 +13,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e7cd415e-9e19-48ff-96a7-6a57a0f86da5",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "87bcaacf51ac4e4380985cc7752d3482",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='info', description='在使用【佛山】代理', style=ButtonStyle(), tooltip='请点击下方的区名')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bf1dda58fa0b451291cea17403cb20a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='芜湖', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1dcec1ea0518471c8f1abacad06261e0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='北京', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "33283b4965344c6cb5115746ed68ad2c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='内蒙', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c86f2c1c39e14e90ad9f98e3f890bcd4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='泉州', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fb7e31fa914441bbaaf57239a3afb840",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='南京', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "53485d3ca0fc4ff98589840d4ce65495",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='success', description='佛山', icon='check', style=ButtonStyle(), tooltip='Click me')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import os,subprocess\n",
     "from ipywidgets import interact,widgets\n",
@@ -134,7 +230,7 @@
     "tags": []
    },
    "source": [
-    "## <i class=\"fa fa-download\"></i> 安装"
+    "## <i class=\"fa fa-download\"></i> 安装或更新"
    ]
   },
   {
@@ -142,28 +238,55 @@
    "id": "5ad3426b-6fac-4e87-b538-d4f1affdded1",
    "metadata": {},
    "source": [
-    "安装OneClick-stale-diffusion本体"
+    "安装或更新OneClick-stale-diffusion本体"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "90d07288-756b-416b-ad8d-4146a45b0c90",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "scrolled": true,
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7dc5e2d2327c4d91813cce20830e6e1d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='warning', description='正在安装中...', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f49f49f3d5ee480390f9949507d8b63e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(button_style='warning', description='需要重装？', icon='question-circle', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "from subprocess import getoutput\n",
     "from IPython.display import display,clear_output\n",
     "import os\n",
-    "\n",
-    "dirFolder = '/root/OneClick-stable-diffusion/'\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "from func.env import installDir\n",
     "\n",
     "btn = widgets.Button(\n",
     "    value=False,\n",
@@ -183,6 +306,26 @@
     "    icon='question-circle' # (FontAwesome names without the `fa-` prefix)\n",
     ")\n",
     "\n",
+    "def autoUpdate(obj):\n",
+    "    obj.description='正在自动更新...'\n",
+    "    obj.button_style='info'\n",
+    "    obj.icon='upload'\n",
+    "    stdout = !{proxy} &&\\\n",
+    "    cd $installDir &&\\\n",
+    "    git pull\n",
+    "    if 'Already up to date.' in stdout:\n",
+    "        obj.description='自动更新完成'\n",
+    "        obj.button_style='success'\n",
+    "        obj.icon='check-circle'\n",
+    "\n",
+    "def reinstall(obj):\n",
+    "    obj.close()\n",
+    "    btn.description=\"正在重装...\"\n",
+    "    btn.button_style='warning'\n",
+    "    btn.icon='exclamation-triangle'\n",
+    "    !rm -rf $installDir\n",
+    "    install_language_pack()\n",
+    "\n",
     "def install_language_pack():\n",
     "    # print(\"开始安装\")\n",
     "    stdout =!{proxy} &&\\\n",
@@ -195,7 +338,7 @@
     "          size += sum([os.path.getsize(os.path.join(root, name)) for name in files])\n",
     "       return size\n",
     "\n",
-    "    sz = getdirsize(dirFolder)\n",
+    "    sz = getdirsize(installDir)\n",
     "    # print(stdout)\n",
     "    # print(sz)\n",
     "    for i in stdout:\n",
@@ -205,6 +348,7 @@
     "                btn.description='已经安装过'\n",
     "                btn.button_style='info'\n",
     "                btn.icon='check-circle'\n",
+    "                autoUpdate(btn)\n",
     "                display(reinstallBtn)\n",
     "            else:\n",
     "                btn.description='安装成功!'\n",
@@ -216,22 +360,19 @@
     "            btn.icon='exclamation-triangle'\n",
     "  \n",
     "            \n",
-    "def reinstall(obj):\n",
-    "    obj.close()\n",
-    "    btn.description=\"正在重装...\"\n",
-    "    btn.button_style='warning'\n",
-    "    btn.icon='exclamation-triangle'\n",
-    "    !rm -rf $dirFolder\n",
-    "   \n",
-    "    install_language_pack()\n",
-    "\n",
-    "    \n",
     "reinstallBtn.on_click(reinstall)\n",
-    "            \n",
-    "# btn.on_click(install_language_pack)\n",
+    "\n",
     "display(btn)\n",
     "install_language_pack()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "779d49cf-a699-42fd-878f-1d8f5800e205",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
